<resources>
    <string name="app_name">Travel With Me</string>

    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="login_button">LOGIN</string>
    <string name="signup_button">SIGN UP</string>
    <string name="get_password_link">GET PASSWORD LINK</string>
    <string name="back">BACK</string>
    <string name="logout">LOGOUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="followers_hint">Followers</string>
    <string name="following_hint">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="fa_map_marker">\uf041</string>
    <string name="fa_heart_o">\uf08a</string>
    <string name="fa_repost">\uf079</string>

    <string name="save">save</string>
    <string name="picture">picture</string>
    <string name="post">post</string>
    <string name="post_description">Введите описание маршрута</string>
    <string name="location_permission_denied">Отказано</string>
    <string name="permission_rationale_location">Разрешить доступ к вашему местоположению?</string>
    <string name="describe_this_place">Describe this place...</string>
    <string name="action_search">Search</string>

    <string name="ok">ok</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings_profile">SettingsProfileActivity</string>
    <string name="name">First Name</string>
    <string name="username">Last Name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="update">UPDATE</string>
    <string name="search_query_hint">Enter user name</string>
    <string name="ion_search"></string>
    <string name="place_name">Place Name</string>

    <string name="search_hint">search</string>
    <string name="search">Search</string>
    <string name="input_name">Input name</string>
</resources>