<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_profile"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image_view"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@mipmap/ic_launcher"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/user_name_text_view"
            style="@style/TextView.Primary.Header"
            android:layout_below="@id/user_image_view"
            android:layout_marginTop="@dimen/text_small_margin"
            android:text="Имя"/>

        <TextView
            android:id="@+id/user_nick_text_view"
            style="@style/TextView.Secondary"
            android:layout_below="@id/user_name_text_view"
            android:layout_marginTop="@dimen/text_small_margin"
            android:text="Ник"/>

        <TextView
            android:id="@+id/user_description_text_view"
            style="@style/TextView.Primary"
            android:layout_below="@id/user_nick_text_view"
            android:layout_marginTop="@dimen/text_small_margin"
            android:text="Описание"/>

        <TextView
            android:id="@+id/user_location_icon_text_view"
            style="@style/TextIcon"
            android:layout_alignBaseline="@id/user_location_text_view"
            android:layout_below="@id/user_description_text_view"
            android:layout_marginTop="@dimen/text_small_margin"
            android:text="@string/fa_map_marker"/>

        <TextView
            android:id="@+id/user_location_text_view"
            style="@style/TextView.Secondary"
            android:layout_below="@id/user_description_text_view"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/text_small_margin"
            android:layout_toEndOf="@id/user_location_icon_text_view"
            android:text="Местоположение"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/user_location_icon_text_view" />

        <Button
            android:id="@+id/followers_count_text_view"
            style="@style/TextView.Primary.Bold"
            android:layout_width="90dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="10dp"
            android:text="4"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/followers_text_view"
            style="@style/TextView.Secondary"
            android:text="@string/followers_hint"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/following_count_text_view"
            style="@style/TextView.Primary.Bold"
            android:layout_toEndOf="@+id/followers_count_text_view"
            android:text="4"
            android:layout_marginTop="10dp"
            android:layout_width="90dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:background="@android:color/transparent"
            android:layout_toRightOf="@+id/followers_count_text_view" />

        <TextView
            android:id="@+id/following_text_view"
            style="@style/TextView.Secondary"
            android:text="@string/following_hint"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/followers_text_view"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/edit_profile"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginLeft="160dp"
            android:layout_below="@id/followers_text_view"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:background="@drawable/shape"/>

        <Button
            android:id="@+id/b_plus"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="150dp"
            android:padding="8dp"
            app:icon="@drawable/ic_add_24dp" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginTop="@dimen/text_small_margin"
        android:background="@color/gray_mercury"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/posts_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
